Get screenshots and record screen for test failures

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,7 +15,9 @@ android {
         versionCode 1
         versionName "1.0-RC01"
 
-        testInstrumentationRunner "io.qameta.allure.android.runners.AllureAndroidJUnitRunner"
+       // testInstrumentationRunner "io.qameta.allure.android.runners.AllureAndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
         // The following argument makes the Android Test Orchestrator run its
         // "pm clear" command after each test invocation. This command ensures
         // that the app's state is completely cleared between tests.
@@ -85,6 +87,7 @@ android {
     }
 }
 
+apply from: '../gradleScripts/ui-test-screen-report.gradle'
 
 dependencies {
     implementation deps.appCompat
