--- a/gradle.properties
+++ b/gradle.properties
@@ -23,3 +23,7 @@ kotlin.code.style=official
 android.nonTransitiveRClass=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
+# Use camera features such as QR code scanning. False to use fake camera source to skip.
+useCamera=true
+# Set the automation test execution environment
+executionEnvironment=iotest
