--- a/settings.gradle
+++ b/settings.gradle
@@ -14,3 +14,6 @@ dependencyResolutionManagement {
 }
 rootProject.name = "AllureAndroid"
 include ':app'
+include ':dataset-testing'
+include ':dataset-testing2'
+include ':dataset-test'
