--- a/dataset-testing/build.gradle
+++ b/dataset-testing/build.gradle
@@ -4,10 +4,11 @@ plugins {
 }
 
 android {
-    compileSdk 33
+    compileSdk config.compileSdk
 
     defaultConfig {
-        minSdk 24
+        minSdk config.minSdk
+        targetSdk config.targetSdk
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -36,12 +37,12 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
         coreLibraryDesugaringEnabled true
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = JavaVersion.VERSION_11
         freeCompilerArgs += "-opt-in=kotlin.RequiresOptIn"
     }
     testOptions {
